--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,9 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.6
+install_requires =
+         websocket-client==0.57.0
+
 
 [options.packages.find]
 exclude =
