--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+requests = "2.25.1"
 
 [dev-packages]
 pre-commit = "2.10.1"
+pylint = "2.7.0"
+flake8 = "3.8.4"
+pytest = "6.2.2"
 
 [requires]
 python_version = "3.8"
