--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ packages = find:
 python_requires = >=3.6
 install_requires =
          websocket-client==0.57.0
-
+         requests ==2.25.1
 
 [options.packages.find]
 exclude =
