--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.9
 
 [options]
-packages=["livechat"]
+packages=["livechat.agent", "livechat.configuration", "livechat.customer"]
 python_requires = >=3.6
 install_requires =
          websocket-client==0.57.0
