Fix  section in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,10 @@ classifiers =
     Programming Language :: Python :: 3.9
 
 [options]
-packages=["livechat.agent", "livechat.configuration", "livechat.customer"]
+packages =
+    livechat.agent
+    livechat.customer
+    livechat.configuration
 python_requires = >=3.6
 install_requires =
          websocket-client==0.57.0
