--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
   rev: '3.8.4'
   hooks:
     - id: flake8
-      args: ['--ignore=E501']
+      args: ['--ignore=E501,E301']
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v0.812'
     hooks:
