--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 requests = "2.25.1"
 websocket-client= "0.57.0"
 urllib3 = "1.26.4"
+websockets = "~=8.1"
+aiohttp = "3.7.4.post0"
 
 [dev-packages]
 pre-commit = "2.10.1"
