--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = lc-sdk-python
-version = 0.1.2
+version = 0.1.3
 description = Package which lets to work with LiveChat API.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -20,10 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.9
 
 [options]
-packages =
-    livechat.agent
-    livechat.customer
-    livechat.configuration
+packages = find:
 python_requires = >=3.6
 install_requires =
          websocket-client==0.57.0
@@ -31,4 +28,4 @@ install_requires =
 
 [options.packages.find]
 exclude =
-         tests*
+         livechat.tests
