--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = lc-sdk-python
-version = 0.1.3
+version = 0.1.4
 description = Package which lets to work with LiveChat API.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -24,7 +24,10 @@ packages = find:
 python_requires = >=3.6
 install_requires =
          websocket-client==0.57.0
-         requests ==2.25.1
+         httpx ==0.19.0
+
+[options.extras_require]
+httpx = http2
 
 [options.packages.find]
 exclude =
