--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 websocket-client= "1.2.1"
 urllib3 = "1.26.6"
 httpx = {extras = ["http2"], version = "0.19.0"}
+python-dotenv = "0.19.2"
 
 [dev-packages]
 pre-commit = "2.10.1"
