Add python-dotenv to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ python_requires = >=3.6
 install_requires =
          websocket-client==1.2.1
          httpx ==0.19.0
+         python-dotenv =0.19.2
 
 [options.extras_require]
 httpx = http2
