--- a/setup.cfg
+++ b/setup.cfg
@@ -24,8 +24,8 @@ packages = find:
 python_requires = >=3.6
 install_requires =
          websocket-client==1.2.1
-         httpx ==0.19.0
-         python-dotenv =0.19.2
+         httpx==0.19.0
+         python-dotenv==0.19.2
 
 [options.extras_require]
 httpx = http2
