--- a/.github/workflows/quality-checkup.yml
+++ b/.github/workflows/quality-checkup.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: lc-sdk-python tests
+name: Quality checkup
 
 on:
   push:
@@ -9,13 +9,14 @@ on:
   pull_request:
 jobs:
   build:
+    name: Setup Python, install dependencies, run linter and tests
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+         python-version: "3.8"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
