--- a/.github/workflows/publish-to-testpypi.yml
+++ b/.github/workflows/publish-to-testpypi.yml
@@ -1,8 +1,9 @@
-name: Publish Python distribution to PyPI
+name: Publish Python distribution to TestPyPI
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -29,14 +30,16 @@ jobs:
         name: python-package-distributions
         path: dist/
 
-  publish-to-pypi:
-    name: Publish to PyPI
+  publish-to-testpypi:
+    name: Publish to TestPyPI
     needs:
     - build
     runs-on: ubuntu-latest
+
     environment:
-      name: pypi
-      url: https://pypi.org/p/lc-sdk-python
+      name: testpypi
+      url: https://test.pypi.org/p/lc-sdk-python
+
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
@@ -46,5 +49,8 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
-    - name: Publish to PyPI
+    - name: Publish to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        skip-existing: true
+        repository-url: https://test.pypi.org/legacy/
