Improved logging by appending response headers to the existing log message

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,8 +23,8 @@ classifiers =
 packages = find:
 python_requires = >=3.6
 install_requires =
-         websocket-client==1.6.3
-         httpx ==0.25.0
+         websocket-client = >=1.7.0
+         httpx = >=0.25.0
 
 [options.extras_require]
 httpx = http2
