--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,21 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-websocket-client= "1.7.0"
-urllib3 = "2.2.2"
-httpx = {extras = ["http2"], version = "==0.25.2"}
-loguru = "==0.7.2"
-idna = ">=3.7"
+websocket-client= "==1.8.0"
+urllib3 = "==2.2.3"
+loguru = "==0.7.3"
+idna = "==3.10"
+anyio = "==4.5.2"
+certifi = "==2024.12.14"
+exceptiongroup = "==1.2.2"
+h11 = "==0.14.0"
+h2 = "==4.1.0"
+hpack = "==4.0.0"
+httpcore = "==1.0.7"
+hyperframe = "==6.0.1"
+sniffio = "==1.3.1"
+typing-extensions = "==4.12.2"
+httpx = {extras = ["http2"], version = "==0.28.1"}
 
 [dev-packages]
 pre-commit = "3.5.0"
