Allow passing custom header for websocket handshake. Change pre-commit flake8 URL.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
              --disable=too-many-locals,
              --disable=duplicate-code,
              --disable=logging-fstring-interpolation]
-- repo: https://gitlab.com/pycqa/flake8
+- repo: https://github.com/pycqa/flake8
   rev: '3.8.4'
   hooks:
     - id: flake8
