--- a/.github/workflows/publish-to-testpypi.yml
+++ b/.github/workflows/publish-to-testpypi.yml
@@ -1,5 +1,8 @@
 name: Publish Python distribution to TestPyPI
 
+permissions:
+  contents: read
+
 on:
   push:
     branches:
@@ -11,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v6
       with:
-        python-version: "3.8"
+        python-version: "3.13.0"
     - name: Install pypa/build
       run: >-
         python3 -m
