--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 -i https://pypi.org/simple
 anyio==4.5.2; python_version >= '3.8'
-certifi==2024.12.14; python_version >= '3.6'
-exceptiongroup==1.2.2; python_version < '3.7'
-h11==0.14.0; python_version >= '3.7'
-h2==4.1.0
-hpack==4.0.0; python_full_version >= '3.6.1'
-httpcore==1.0.7; python_version >= '3.8'
+certifi==2025.11.12; python_version >= '3.7'
+exceptiongroup==1.3.1; python_version >= '3.7'
+h11==0.16.0; python_version >= '3.8'
+h2==4.2.0; python_version >= '3.9'
+hpack==4.1.0; python_version >= '3.9'
+httpcore==1.0.9; python_version >= '3.8'
 httpx[http2]==0.28.1; python_version >= '3.8'
-hyperframe==6.0.1; python_full_version >= '3.6.1'
+hyperframe==6.1.0; python_version >= '3.9'
 idna==3.10; python_version >= '3.6'
-loguru==0.7.3; python_version >= '3.5'
+loguru==0.7.3; python_version >= '3.5' and python_version < '4.0'
 sniffio==1.3.1; python_version >= '3.7'
-typing-extensions==4.12.2; python_version < '3.8'
-urllib3==2.2.3; python_version >= '3.8'
-websocket-client==1.8.0; python_version >= '3.8'
+typing-extensions==4.12.2; python_version >= '3.8'
+urllib3==2.6.2; python_version >= '3.9'
+websocket-client==1.9.0; python_version >= '3.9'
